# codename-generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: config.py  database.py  main.py
app/core/: generator.py  wordlists.py
app/models/: models.py
app/routers/: codenames.py  namespaces.py  stats.py
app/schemas/: schemas.py
app/services/: recycle.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: test_generator.py
